--- a/Bipeople/Bipeople/Base.lproj/History.storyboard
+++ b/Bipeople/Bipeople/Base.lproj/History.storyboard
@@ -4,6 +4,7 @@
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
+        <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13156.2"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="Constraints with non-1.0 multipliers" minToolsVersion="5.1"/>
@@ -33,7 +34,7 @@
                                             <nil key="highlightedColor"/>
                                         </label>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Distance" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="id1-eA-g2Y">
-                                            <rect key="frame" x="300" y="34" width="67" height="21"/>
+                                            <rect key="frame" x="292" y="34" width="75" height="21"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                             <color key="textColor" red="0.25098040700000002" green="0.0" blue="0.50196081400000003" alpha="1" colorSpace="calibratedRGB"/>
                                             <nil key="highlightedColor"/>
@@ -52,6 +53,7 @@
                                         <constraint firstItem="3hi-AV-MFl" firstAttribute="leading" secondItem="TfH-e1-Gyt" secondAttribute="leading" id="X0y-ys-ZkE"/>
                                         <constraint firstItem="TfH-e1-Gyt" firstAttribute="width" secondItem="WFu-Ke-e3k" secondAttribute="width" multiplier="0.7" id="X2b-40-Ho9"/>
                                         <constraint firstItem="id1-eA-g2Y" firstAttribute="trailing" secondItem="WFu-Ke-e3k" secondAttribute="trailingMargin" id="iSR-Lf-hIA"/>
+                                        <constraint firstItem="id1-eA-g2Y" firstAttribute="width" secondItem="WFu-Ke-e3k" secondAttribute="width" multiplier="0.2" id="vhq-Oi-hcu"/>
                                         <constraint firstItem="TfH-e1-Gyt" firstAttribute="leading" secondItem="WFu-Ke-e3k" secondAttribute="leadingMargin" id="x68-3q-55h"/>
                                         <constraint firstItem="TfH-e1-Gyt" firstAttribute="top" secondItem="WFu-Ke-e3k" secondAttribute="topMargin" constant="13" id="yxn-2Z-IUH"/>
                                     </constraints>
@@ -88,7 +90,7 @@
         <!--History Graph-->
         <scene sceneID="Ta9-0N-8XF">
             <objects>
-                <viewController id="rBX-VJ-YkM" userLabel="History Graph" customClass="HistoryChartViewController" customModule="Bipeople" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="rBX-VJ-YkM" userLabel="History Graph" customClass="HistoryGraphViewController" customModule="Bipeople" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="I5j-mX-oeS"/>
                         <viewControllerLayoutGuide type="bottom" id="aLi-c2-5Co"/>
@@ -104,10 +106,17 @@
                                     <segment title="weekly"/>
                                     <segment title="monthly"/>
                                 </segments>
+                                <connections>
+                                    <action selector="didChangeSegControl:" destination="rBX-VJ-YkM" eventType="valueChanged" id="aBc-j0-uUX"/>
+                                </connections>
                             </segmentedControl>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="wcW-aI-mFE" userLabel="Graph" customClass="ScrollableGraphView" customModule="ScrollableGraphView">
-                                <rect key="frame" x="16" y="148.5" width="343" height="320"/>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="mjy-SM-4kU" userLabel="Container">
+                                <rect key="frame" x="16" y="146" width="343" height="320"/>
                                 <subviews>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="wcW-aI-mFE" userLabel="Graph" customClass="ScrollableGraphView" customModule="ScrollableGraphView">
+                                        <rect key="frame" x="0.0" y="0.0" width="343" height="320"/>
+                                        <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
+                                    </view>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="NNG-aQ-p1g" userLabel="Calendar" customClass="FSCalendar">
                                         <rect key="frame" x="0.0" y="0.0" width="343" height="320"/>
                                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
@@ -123,21 +132,24 @@
                                             </userDefinedRuntimeAttribute>
                                         </userDefinedRuntimeAttributes>
                                         <connections>
-                                            <outlet property="dataSource" destination="rBX-VJ-YkM" id="0TG-zo-2wN"/>
-                                            <outlet property="delegate" destination="rBX-VJ-YkM" id="obm-7X-sCT"/>
+                                            <outlet property="dataSource" destination="rBX-VJ-YkM" id="HZE-gk-7kq"/>
+                                            <outlet property="delegate" destination="rBX-VJ-YkM" id="FEl-Hn-dTC"/>
                                         </connections>
                                     </view>
                                 </subviews>
-                                <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                                 <constraints>
-                                    <constraint firstItem="NNG-aQ-p1g" firstAttribute="leading" secondItem="wcW-aI-mFE" secondAttribute="leading" id="2JF-Wa-uN4"/>
-                                    <constraint firstItem="NNG-aQ-p1g" firstAttribute="top" secondItem="wcW-aI-mFE" secondAttribute="top" id="Y5w-rX-3sk"/>
-                                    <constraint firstAttribute="trailing" secondItem="NNG-aQ-p1g" secondAttribute="trailing" id="fi4-Eh-dMI"/>
-                                    <constraint firstAttribute="bottom" secondItem="NNG-aQ-p1g" secondAttribute="bottom" id="yjw-bd-zpD"/>
+                                    <constraint firstItem="NNG-aQ-p1g" firstAttribute="leading" secondItem="mjy-SM-4kU" secondAttribute="leading" id="0V4-3d-QIZ"/>
+                                    <constraint firstAttribute="trailing" secondItem="wcW-aI-mFE" secondAttribute="trailing" id="HTG-0h-R50"/>
+                                    <constraint firstAttribute="trailing" secondItem="NNG-aQ-p1g" secondAttribute="trailing" id="Ohc-bn-N2M"/>
+                                    <constraint firstItem="NNG-aQ-p1g" firstAttribute="top" secondItem="mjy-SM-4kU" secondAttribute="top" id="dFz-CZ-Cav"/>
+                                    <constraint firstAttribute="bottom" secondItem="wcW-aI-mFE" secondAttribute="bottom" id="nse-De-fqf"/>
+                                    <constraint firstItem="wcW-aI-mFE" firstAttribute="top" secondItem="mjy-SM-4kU" secondAttribute="top" id="rmu-9I-tUX"/>
+                                    <constraint firstAttribute="bottom" secondItem="NNG-aQ-p1g" secondAttribute="bottom" id="u1z-HG-qMC"/>
+                                    <constraint firstItem="wcW-aI-mFE" firstAttribute="leading" secondItem="mjy-SM-4kU" secondAttribute="leading" id="vAv-QN-ngO"/>
                                 </constraints>
                             </view>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="h7T-SQ-fSD" customClass="CardView" customModule="Bipeople" customModuleProvider="target">
-                                <rect key="frame" x="16" y="484.5" width="343" height="133.5"/>
+                                <rect key="frame" x="16" y="482" width="343" height="133.5"/>
                                 <subviews>
                                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" alignment="top" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="X4R-i8-r9O">
                                         <rect key="frame" x="8" y="14" width="103" height="106.5"/>
@@ -211,11 +223,11 @@
                                 </constraints>
                             </view>
                             <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="FsU-sR-QDa">
-                                <rect key="frame" x="57" y="120" width="262" height="20.5"/>
+                                <rect key="frame" x="41.5" y="120" width="292" height="18"/>
                                 <subviews>
-                                    <label opaque="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="17-08-09" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="mdX-n4-4LX" userLabel="Start Label">
-                                        <rect key="frame" x="0.0" y="0.0" width="74" height="20.5"/>
-                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                    <label opaque="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="2017-08-09" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="mdX-n4-4LX" userLabel="Start Label">
+                                        <rect key="frame" x="0.0" y="0.0" width="84" height="18"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="15"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                         <connections>
@@ -223,14 +235,14 @@
                                         </connections>
                                     </label>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="~" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="bAw-TU-FYo">
-                                        <rect key="frame" x="94" y="0.0" width="74" height="20.5"/>
-                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <rect key="frame" x="104" y="0.0" width="84" height="18"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="15"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
-                                    <label opaque="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="17-09-21" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6x5-Lp-7sU" userLabel="End Label">
-                                        <rect key="frame" x="188" y="0.0" width="74" height="20.5"/>
-                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                    <label opaque="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="2017-09-21" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6x5-Lp-7sU" userLabel="End Label">
+                                        <rect key="frame" x="208" y="0.0" width="84" height="18"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="15"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                         <connections>
@@ -242,24 +254,26 @@
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="wcW-aI-mFE" firstAttribute="trailing" secondItem="KMo-Zf-rbb" secondAttribute="trailingMargin" id="4wP-0N-gqP"/>
                             <constraint firstItem="h7T-SQ-fSD" firstAttribute="trailing" secondItem="KMo-Zf-rbb" secondAttribute="trailingMargin" id="Cy3-zW-5XG"/>
-                            <constraint firstItem="h7T-SQ-fSD" firstAttribute="top" secondItem="wcW-aI-mFE" secondAttribute="bottom" constant="16" id="IOb-UQ-cky"/>
+                            <constraint firstItem="mjy-SM-4kU" firstAttribute="leading" secondItem="KMo-Zf-rbb" secondAttribute="leadingMargin" id="F7A-1F-ckK"/>
+                            <constraint firstItem="h7T-SQ-fSD" firstAttribute="top" secondItem="mjy-SM-4kU" secondAttribute="bottom" constant="16" id="Gfr-a7-Hhk"/>
                             <constraint firstItem="8cM-zC-Fsa" firstAttribute="top" secondItem="I5j-mX-oeS" secondAttribute="bottom" constant="20" id="Kn4-Fe-dgV"/>
                             <constraint firstItem="8cM-zC-Fsa" firstAttribute="centerX" secondItem="KMo-Zf-rbb" secondAttribute="centerX" id="Nei-rv-cKV"/>
+                            <constraint firstItem="mjy-SM-4kU" firstAttribute="height" secondItem="KMo-Zf-rbb" secondAttribute="height" multiplier="0.48" id="QNp-62-pCU"/>
                             <constraint firstItem="FsU-sR-QDa" firstAttribute="centerX" secondItem="KMo-Zf-rbb" secondAttribute="centerX" id="SAC-LO-Vho"/>
-                            <constraint firstItem="wcW-aI-mFE" firstAttribute="height" secondItem="KMo-Zf-rbb" secondAttribute="height" multiplier="0.48" id="Sbf-WS-Gpr"/>
+                            <constraint firstItem="mjy-SM-4kU" firstAttribute="trailing" secondItem="KMo-Zf-rbb" secondAttribute="trailingMargin" id="Tka-Q4-RX0"/>
                             <constraint firstItem="FsU-sR-QDa" firstAttribute="top" secondItem="8cM-zC-Fsa" secondAttribute="bottom" constant="8" id="bpR-Ie-nvU"/>
-                            <constraint firstItem="wcW-aI-mFE" firstAttribute="leading" secondItem="KMo-Zf-rbb" secondAttribute="leadingMargin" id="eWU-3y-Lik"/>
                             <constraint firstItem="h7T-SQ-fSD" firstAttribute="leading" secondItem="KMo-Zf-rbb" secondAttribute="leadingMargin" id="m4M-wS-fFr"/>
                             <constraint firstItem="h7T-SQ-fSD" firstAttribute="height" secondItem="KMo-Zf-rbb" secondAttribute="height" multiplier="0.2" id="pRc-vp-BoW"/>
-                            <constraint firstItem="wcW-aI-mFE" firstAttribute="top" secondItem="FsU-sR-QDa" secondAttribute="bottom" constant="8" id="vXI-3P-inm"/>
+                            <constraint firstItem="mjy-SM-4kU" firstAttribute="top" secondItem="FsU-sR-QDa" secondAttribute="bottom" constant="8" id="xIo-bx-9Ob"/>
                         </constraints>
                     </view>
                     <connections>
-                        <outlet property="calendarView" destination="NNG-aQ-p1g" id="NmO-06-9Im"/>
+                        <outlet property="calendarView" destination="NNG-aQ-p1g" id="X5u-tt-n3X"/>
+                        <outlet property="containerView" destination="mjy-SM-4kU" id="1ty-4U-x9U"/>
                         <outlet property="endLabel" destination="6x5-Lp-7sU" id="tWp-qC-5Jl"/>
-                        <outlet property="graphView" destination="wcW-aI-mFE" id="2Li-2d-gmU"/>
+                        <outlet property="prototypeGraphView" destination="wcW-aI-mFE" id="aF5-bZ-FFj"/>
+                        <outlet property="segmentedControl" destination="8cM-zC-Fsa" id="7gc-TR-W0V"/>
                         <outlet property="startLabel" destination="mdX-n4-4LX" id="RNH-P7-zsH"/>
                     </connections>
                 </viewController>
@@ -360,7 +374,7 @@
                                                 <nil key="textColor"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
-                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="20.1 km/h" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="I4a-QS-Vnk">
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="20.1 km/h" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="I4a-QS-Vnk" userLabel="Maximum Speed Label">
                                                 <rect key="frame" x="173.5" y="120.5" width="66.5" height="20"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="15"/>
                                                 <nil key="textColor"/>
@@ -434,7 +448,7 @@
                         <outlet property="caloriesLabel" destination="Nhq-mk-vXI" id="isx-CG-ISR"/>
                         <outlet property="createdAt" destination="DSo-rY-X0v" id="UkT-e1-7eZ"/>
                         <outlet property="distanceLabel" destination="OX8-c2-ulq" id="bQu-FH-gCT"/>
-                        <outlet property="highestSpeedLabel" destination="I4a-QS-Vnk" id="xfH-eO-Zj2"/>
+                        <outlet property="maximumSpeedLabel" destination="I4a-QS-Vnk" id="Whl-Mc-ACw"/>
                         <outlet property="restTimeLabel" destination="A5l-aP-8ex" id="AQ8-bn-hmt"/>
                         <outlet property="ridingTimeLabel" destination="up2-Gw-5d6" id="evZ-fr-Udp"/>
                         <outlet property="titleLabel" destination="psD-61-zu4" id="hSZ-7a-Ceb"/>
